passing test, wll working, adjusted css to tweak layout

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -8,6 +8,28 @@ body {
   p {
     margin: 0;
   }
+
+  #search-input {
+    width: 700px;
+  }
+
+  .main-weather {
+    width: 500px;
+  }
+
+  .history-card {
+    width: 400px;
+  }
+
+
+  .weathers {
+    width: 200px;
+    height: 200px;
+  }
+
+  .input-group {
+    width: 100%;
+  }
   
   .weather-results-header {
     margin: 1em auto 1.5em;
@@ -43,13 +65,12 @@ body {
     text-align: center;
   }
   
-  p.weather-parameter-name {
+  .weather-parameter-name {
     margin: 0em 0em 0.5em;
-    font-size: 0.75em;
-    font-weight: bold;
+    font-size: 1.5em;
   }
   
-  p.weather-parameter-value {
+  .weather-parameter-value {
     color: forestgreen;
   }
   
@@ -63,8 +84,3 @@ body {
     text-align: right;
   }
   
-  footer {
-    margin: 1em auto;
-    text-align: center;
-    font-size: 0.75em;
-  }
